--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,9 +66,9 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.__clientidsecretname__ }}
-          tenant-id: ${{ secrets.__tenantidsecretname__ }}
-          subscription-id: ${{ secrets.__subscriptionidsecretname__ }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_4C2A3422CAC146E3A31C00DCC2A90743 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_A9B61CCEC5C94C89B19B04B2D481C231 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_C984126539CD4DF9951D0FBE5C7E1B78 }}
 
       - name: 'Run Azure Functions Action'
         uses: Azure/functions-action@v1
@@ -77,3 +77,4 @@ jobs:
           app-name: 'sivaphanihttpfunction'
           slot-name: 'Production'
           package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
+          
